style: fixed organizer header's misalignment

--- a/src/app/organizer/ItemTable.m.scss
+++ b/src/app/organizer/ItemTable.m.scss
@@ -75,7 +75,7 @@ $content-cells: 5;
   }
 
   &.stats {
-    text-align: right;
+    text-align: left;
   }
 }
 
